# sheplet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
bins/sheplet-instructor/: Cargo.toml
bins/sheplet-instructor-web/: Cargo.toml
bins/sheplet-instructor-web/src/: app_state.rs  main.rs  project.rs  response.rs  server.rs  task_manager.rs  validation.rs
bins/sheplet-instructor-web/src/frontend/: app.js  index.html  style.css
bins/sheplet-instructor-web/src/handlers/: bundle.rs  config.rs  finetune.rs  frontend.rs  ingest.rs  mod.rs  model.rs  projects.rs  tasks.rs  templates.rs
bins/sheplet-instructor/src/: cli.rs  main.rs  progress.rs  project.rs
bins/sheplet-instructor/src/commands/: bundle.rs  config.rs  finetune.rs  ingest.rs  init.rs  mod.rs  model.rs  templates.rs
bins/sheplet-instructor/tests/: cli_tests.rs
bins/sheplet-student/: Cargo.toml
bins/sheplet-student/src/: app_state.rs  course.rs  lib.rs  main.rs  server.rs
bins/sheplet-student/src/frontend/: app.js  index.html  style.css
bins/sheplet-student/src/handlers/: bundles.rs  chat.rs  conversations.rs  courses.rs  frontend.rs  mod.rs  settings.rs
bins/sheplet-student/tests/: system_tests.rs  test_data.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: error.rs  keys.rs  lib.rs  manifest.rs  pack.rs  unpack.rs
crates/compute/: Cargo.toml
crates/compute/src/: detect.rs  lib.rs  policy.rs
crates/conversations/: Cargo.toml
crates/conversations/src/: error.rs  export.rs  lib.rs  store.rs  types.rs
crates/conversations/tests/: store_tests.rs
crates/db/: Cargo.toml  build.rs
crates/db/benches/: search.rs
crates/db/src/: error.rs  lib.rs  memory_store.rs  query.rs  store.rs
crates/embeddings/: Cargo.toml
crates/embeddings/benches/: embed.rs
crates/embeddings/src/: download.rs  error.rs  lib.rs  model.rs  normalize.rs
crates/finetune/: Cargo.toml
crates/finetune/examples/: grad_probe.rs
crates/finetune/src/: checkpoint.rs  data.rs  dpo.rs  error.rs  gemma3_lora.rs  gemma_lora.rs  lib.rs  llama_lora.rs  lora.rs  mistral_lora.rs  model_utils.rs  phi3_lora.rs  preflight.rs  qwen2_lora.rs  sft.rs
crates/parser/: Cargo.toml
crates/parser/src/: chunk.rs  error.rs  lib.rs  walk.rs
crates/parser/src/extract/: csv_extract.rs  docx.rs  mod.rs  pdf.rs  txt.rs  xlsx.rs
crates/parser/tests/: integration_tests.rs
crates/parser/tests/fixtures/: sample.csv  sample.txt
crates/project/: Cargo.toml
crates/project/src/: lib.rs
crates/rag/: Cargo.toml
crates/rag/benches/: prompt.rs
crates/rag/src/: config.rs  error.rs  gemma3.rs  inference.rs  lib.rs  llama.rs  phi3.rs  pipeline.rs  prompt.rs  quantize.rs  quantized_llama.rs  quantized_phi3.rs
scripts/: detect_gpu.sh  gemma2_reference.py  run_student.sh  test_e2e.sh  test_qa.sh
