[workspace]
resolver = "2"
members = [
    "bins/sheplet-instructor",
    "bins/sheplet-instructor-web",
    "bins/sheplet-student",
    "crates/rag",
    "crates/finetune",
    "crates/parser",
    "crates/embeddings",
    "crates/db",
    "crates/bundle",
    "crates/conversations",
    "crates/project",
    "crates/compute",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
rag = { path = "crates/rag" }
finetune = { path = "crates/finetune" }
parser = { path = "crates/parser" }
embeddings = { path = "crates/embeddings" }
db = { path = "crates/db" }
bundle = { path = "crates/bundle" }
conversations = { path = "crates/conversations" }
project = { path = "crates/project" }
compute = { path = "crates/compute" }

# ML / inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Vector database
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"

# Document parsing
text-splitter = "0.18"
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.26"
csv = "1"

# Web / async
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Bundle
zstd = "0.13"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Caching
lru = "0.12"

# Storage
sled = "0.34"

# Model downloading
hf-hub = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Tokenizer
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Archive
tar = "0.4"

# System info
sysinfo = "0.31"

# Encoding
hex = "0.4"

# Directories
dirs = "6"

# Progress
indicatif = "0.17"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Crypto
rand = "0.8"
sha2 = "0.10"

# Tracing
tracing = "0.1"

# Serialization (tensor)
safetensors = "0.4"
