[package]
name = "sheplet-instructor-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sheplet-instructor-web"
path = "src/main.rs"

[dependencies]
parser.workspace = true
embeddings.workspace = true
db.workspace = true
rag.workspace = true
finetune.workspace = true
bundle.workspace = true
project.workspace = true

candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true

axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
dirs.workspace = true
