[package]
name = "sheplet-instructor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sheplet-instructor"
path = "src/main.rs"

[dependencies]
parser.workspace = true
embeddings.workspace = true
db.workspace = true
rag.workspace = true
finetune.workspace = true
bundle.workspace = true
project.workspace = true
compute.workspace = true

candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
indicatif.workspace = true
dirs.workspace = true
hex.workspace = true

[features]
default = []
metal = ["compute/metal"]
cuda = ["compute/cuda"]
accelerate = ["compute/accelerate"]
mkl = ["compute/mkl"]

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
