[package]
name = "sheplet-student"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sheplet_student"
path = "src/lib.rs"

[[bin]]
name = "sheplet-student"
path = "src/main.rs"

[dependencies]
rag.workspace = true
embeddings.workspace = true
db.workspace = true
bundle.workspace = true
conversations.workspace = true
compute.workspace = true

candle-core.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { workspace = true, features = ["full"] }

[features]
default = []
metal = ["compute/metal"]
cuda = ["compute/cuda"]
accelerate = ["compute/accelerate"]
mkl = ["compute/mkl"]
