[package]
name = "conversations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
