[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lancedb.workspace = true
arrow-array = "53"
arrow-schema = "53"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures = "0.3"

[dev-dependencies]
tempfile.workspace = true
