[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
