[package]
name = "embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
candle-core.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "embed"
harness = false
