[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
text-splitter.workspace = true
pdf-extract.workspace = true
docx-rs.workspace = true
calamine.workspace = true
csv.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
