[package]
name = "rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embeddings.workspace = true
db.workspace = true
conversations.workspace = true

candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
lancedb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
lru.workspace = true
tracing.workspace = true
safetensors.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "prompt"
harness = false
